// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Presenter Test GameGuide Test 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#212529",
        "justifyContent": "center",
        "padding": 5,
        "width": "100%",
      },
      Object {
        "marginHorizontal": 7.5,
        "width": 240,
      },
    ]
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#FCF8F6",
              "fontSize": 15,
              "fontWeight": "900",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          게임설명
        </Text>
        <Text
          style={
            Object {
              "color": "#FCF8F6",
              "fontSize": 12,
              "marginBottom": 10,
            }
          }
        >
          게임방법
        </Text>
      </View>
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderTopColor": "#FCF8F6",
              "borderTopWidth": 5,
              "flex": 1,
              "height": 500,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FCF8F6",
                "fontSize": 15,
                "fontWeight": "900",
                "marginBottom": 10,
                "marginTop": 10,
              }
            }
          >
            조작
          </Text>
          <Image
            source={0}
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "resizeMode": "contain",
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FCF8F6",
                "fontSize": 12,
                "marginBottom": 10,
              }
            }
          >
            조작설명
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Presenter Test Main Test 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#212529",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../public/assets/logo.png",
        }
      }
      style={
        Object {
          "height": 160,
          "width": 240,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 100,
        "justifyContent": "space-evenly",
        "marginBottom": 100,
        "marginTop": 50,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00BBD1",
          "borderColor": "#FCF8F6",
          "borderRadius": 4,
          "borderWidth": 4,
          "height": 120,
          "justifyContent": "center",
          "opacity": 1,
          "width": 120,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 18,
            "fontWeight": "bold",
            "padding": 8,
          }
        }
      >
        Face Go
      </Text>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00E0EA",
          "borderColor": "#FCF8F6",
          "borderRadius": 4,
          "borderWidth": 4,
          "height": 120,
          "justifyContent": "center",
          "opacity": 1,
          "width": 120,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 18,
            "fontWeight": "bold",
            "padding": 8,
          }
        }
      >
        Shout Go
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#96A1A8",
          "borderRadius": 4,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 150,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 15,
            "fontWeight": "bold",
            "padding": 8,
          }
        }
      >
        점수 보기
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#f45a5a",
          "borderRadius": 4,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 150,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 15,
            "fontWeight": "bold",
            "padding": 8,
          }
        }
      >
        게임 종료
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Presenter Test Page Test 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FCF8F6",
        "justifyContent": "center",
        "width": "100%",
      },
      Object {
        "pageWrapper": [Function],
      },
    ]
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#96A1A8",
            "borderColor": "#FCF8F6",
            "borderRadius": 5,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#212529",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
              "width": "50%",
            }
          }
        >
          John
        </Text>
        <Text
          style={
            Object {
              "color": "#212529",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
              "width": "50%",
            }
          }
        >
          300
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FCF8F6",
            "borderColor": "#FCF8F6",
            "borderRadius": 5,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#212529",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
              "width": "50%",
            }
          }
        >
          Tom
        </Text>
        <Text
          style={
            Object {
              "color": "#212529",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
              "width": "50%",
            }
          }
        >
          500
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Presenter Test Page Test 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FCF8F6",
        "justifyContent": "center",
        "width": "100%",
      },
      Object {
        "pageWrapper": [Function],
      },
    ]
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "center",
            "minHeight": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#212529",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
              "width": "50%",
            }
          }
        >
          등록된 정보가 없습니다.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
